<resources>
    <string name="app_name">DzikirQu</string>
    <string name="first_run">first_run</string>

    <string name="english_value">en</string>
    <string name="indonesia_value">id</string>

    <string name="dark_value">dark</string>
    <string name="light_value">light</string>

    <string name="pref_language_label_english">Language</string>
    <string name="pref_language_label_indonesia">Bahasa</string>

    <string name="pref_theme_label_english">Theme</string>
    <string name="pref_theme_label_indonesia">Tema</string>

    <string name="pref_fontsize_english">Text Size</string>
    <string name="pref_fontsize_indonesia">Ukuran Teks</string>

    <string name="pref_dalignment_english">Dzikir Text Alignment</string>
    <string name="pref_dalignment_indonesia">Perataan Teks Dzikir</string>

    <string name="pref_qalignment_english">Quran Text Alignment</string>
    <string name="pref_qalignment_indonesia">Perataan Teks Quran</string>

    <string name="pref_language_key">language</string>
    <string name="pref_theme_key">theme</string>
    <string name="pref_fontsize_key">fontsize</string>
    <string name="pref_dalignment_key">dalignment</string>
    <string name="pref_qalignment_key">qalignment</string>

    <string name="pref_fontsize_default">medium</string>
    <string name="pref_dalignment_default">center</string>
    <string name="pref_qalignment_default">standard</string>

    <string name="title">DzikirQu</string>
    <string name="id">id</string>
    <string name="quran">quran</string>
    <string name="audio_url">audio_url</string>
    <string name="audio_name">audio_name</string>
</resources>
